--- a/sample7-cit(1).html
+++ b/sample7-cit(1).html
@@ -49,9 +49,13 @@
 
         // テクスチャー読み込み
         var textureLoader = new THREE.TextureLoader();  
-        var texture = textureLoader.load("cit.png");
+        var texture = textureLoader.load("img1.png");
         var mat = new THREE.MeshPhongMaterial();
         mat.map = texture;
+        // バンプマップ読み込み
+        var bump = textureLoader.load("stone-bump.jpg");
+        mat.bumpMap = bump;
+        mat.bumpscale = 0.2;
 
         // 箱を作成
         var geometry = new THREE.BoxGeometry(1, 1, 1);
