--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         scene.add(box);   // シーンに追加
 
         var geometry = new THREE.SphereGeometry(0.2, 32, 32);
-        //var material = new THREE.MeshPhongMaterial({ color: 0xffffff });
-        //var box = new THREE.Mesh(geometry, material);
-        var box = new THREE.Mesh(geometry, mat);
+        var material = new THREE.MeshPhongMaterial({ color: 0xffffff });
+        var sphere = new THREE.Mesh(geometry, material);
+        var sphere = new THREE.Mesh(geometry, mat);
         box.position.set(2,2,2); //位置を指定
         scene.add(sphere);   // シーンに追加
         update();
@@ -82,6 +82,8 @@
            // 箱を回転させる
           box.rotation.x += 0.01;
           box.rotation.y += 0.01;
+          sphere.rotation.x -= 0.01;
+          sphere.rotation.y -= 0.01;
 
         }
       }
