--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
         ビルボード：
         <ul>
-            <li><a href="sample8-3.html">sample8-4.html</a></li>
+            <li><a href="bil.html">sample8-4.html</a></li>
         </ul>
   </p>
   </body>
