--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <title>WebGL 課題</title>
 </head>
 <body>
-  <h1>Bump</h1>
+  <h1>バンプ</h1>
   <p>
         バンプ：
         <ul>
             <li><a href="Bump.html">Bump.html</a></li>
         </ul>
   
+   <h2>ビルポート</h2>
         ビルボード：
         <ul>
-            <li><a href="bil.html">sample8-4.html</a></li>
+            <li><a href="bil.html">bil.html</a></li>
         </ul>
   </p>
   </body>
