--- a/robot.html
+++ b/robot.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
-    <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
+ <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
+ <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
   </head>
-<body>
- <script>
+  <body>
+<script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
 
@@ -54,33 +55,23 @@
         plane.rotation.set( -Math.PI/2, 0, 0 );
         plane.position.set(0,0,0);
         scene.add(plane);
-
-        // いろいろなマテリアルの実験
-        //var material = new THREE.MeshBasicMaterial({ color: 0x0000ff });
-        //var material = new THREE.MeshNormalMaterial({ color: 0x000000 });
-        //var material = new THREE.MeshLambertMaterial({ color: 0x0000ff });
-        //var material = new THREE.MeshPhongMaterial({ color: 0x0000ff, specular:0xffff00, shininess:4 });
-        var material = new THREE.MeshPhongMaterial({ color: 0x0000ff, emissive: 0xffff00, emissiveIntensity: 2 });
-        //var material = new THREE.MeshToonMaterial({ color: 0x005555 });
-        //var material = new THREE.MeshStandardMaterial({ color: 0x0005555 });
-
-
-
+        
+        var material = new THREE.MeshStandardMaterial({ color: 0x0005555 });
         // 頭を作成
-        var head_g = new THREE.BoxGeometry( 0.5, 32, 32 );
+        var head_g = new THREE.BoxGeometry( 1, 1, 1 );
         //var material_b = new THREE.MeshPhongMaterial({ color: 0x0000ff });
         var head = new THREE.Mesh(head_g, material);
         head.position.set(0,1.2,0);//allの中心が原点になる
 
         //体を作成
-        var body_g = new THREE.SphereGeometry( 0.6, 32, 32 );
+        var body_g = new THREE.BoxGeometry( 1, 1.5, 1.5 );
         //var material_r = new THREE.MeshPhongMaterial({ color: 0xff0000 });
         var body = new THREE.Mesh( body_g, material);
         body.scale.y =1.5;
         body.position.set(0,0,0);
 
         //左足を作成
-        var leg_g = new THREE.SphereGeometry( 0.25, 32, 32 );
+        var leg_g = new THREE.BoxGeometry( 0.5, 0.5, 0.5 );
         //var material_l = new THREE.MeshPhongMaterial({ color: 0x770077 });
         var lleg = new THREE.Mesh( leg_g, material);
         lleg.scale.z = 2;
@@ -93,31 +84,29 @@
         rleg.scale.y = 0.7;
         rleg.position.set(-0.3,-0.8,0.2);
     
-        //左羽を作成
-        var win_g = new THREE.SphereGeometry( 0.7, 32, 32 );
+        //左手を作成
+        var win_g = new THREE.BoxGeometry( 0.7, 0.5, 0.5);
         //var material_w = new THREE.MeshPhongMaterial({ color: 0x007777 });
         var lwin = new THREE.Mesh( win_g, material);
-        lwin.scale.x = 0.2;
-        lwin.scale.z = 0.5;
-        lwin.rotation.z = 0.5;
+        lwin.scale.x = 2;
+        lwin.scale.z = 0.7;
         lwin.position.set(0.65,0.15,0);
 
-        //右羽を作成
+        //右手を作成
         var rwin = new THREE.Mesh( win_g, material);
-        rwin.scale.x = 0.2;
-        rwin.scale.z = 0.5;
-        rwin.rotation.z = -0.5;
+        rwin.scale.x = 2;
+        rwin.scale.z = 0.7;
         rwin.position.set(-0.65,0.15,0);
 
-        //くちばしの作成
-        var beak_g = new THREE.ConeGeometry( 0.1, 0.5, 32 );
+        //口の作成
+        var beak_g = new THREE.BoxGeometry( 0.3, 0.4, 0.3 );
         var material_beak = new THREE.MeshPhongMaterial({ color: 0xffff00 });
         var beak = new THREE.Mesh( beak_g, material_beak);
         beak.rotation.x = 1.5;
         beak.position.set(0,1,0.6);
 
         //左目
-        var eye_g = new THREE.SphereGeometry( 0.1, 32, 32 );
+        var eye_g = new THREE.BoxGeometry( 0.2, 0.2, 0.2 );
         var material_eye = new THREE.MeshPhongMaterial({ color: 0xffffff });
         var l_eye = new THREE.Mesh( eye_g, material_eye);
         l_eye.position.set(0.2,1.3,0.35);
@@ -126,24 +115,23 @@
         var r_eye = new THREE.Mesh( eye_g, material_eye);
         r_eye.position.set(-0.2,1.3,0.35);
 
-        //ペンギンのオブジェクト
-        const pengin = new THREE.Group();
-        pengin.add(head); // 頭を追加
-        pengin.add(body); //体を追加
-        pengin.add(lleg); //左足を追加
-        pengin.add(rleg); //右足を追加
-        pengin.add(lwin); //左羽を追加
-        pengin.add(rwin); //右羽を追加        
-        pengin.add(beak); //くちばし
-        pengin.add(l_eye); //左目
-        pengin.add(r_eye); //右目
-        pengin.position.set(0,1,0);//ペンギングループの原点の位置
-        scene.add(pengin);
+        const robot = new THREE.Group();
+        robot.add(head); // 頭を追加
+        robot.add(body); //体を追加
+        robot.add(lleg); //左足を追加
+        robot.add(rleg); //右足を追加
+        robot.add(lwin); //左手を追加
+        robot.add(rwin); //右手を追加        
+        robot.add(beak); //口
+        robot.add(l_eye); //左目
+        robot.add(r_eye); //右目
+        robot.position.set(0,1,0);//ロボットグループの原点の位置
+        scene.add(robot);
 
         //全体のオブジェクト
         const all = new THREE.Group();
         all.add(plane);//平面を追加
-        all.add(pengin); // ペンギンを追加
+        all.add(robot); // ロボットを追加
         all.position.set(0,0,0);//全体グループの原点の位置
         scene.add(all); 
 
@@ -156,8 +144,8 @@
           requestAnimationFrame(update);
 
 
-          // ペンギンを回転させる
-          pengin.rotation.y += 0.005;;
+          // ロボットを回転させる
+          robot.rotation.y += 0.005;;
 
           // 全体を回転させる
           //all.rotation.x += 0.01;
@@ -165,5 +153,5 @@
         }
       }
     </script>
-</body>
+  </body>
 </html>
