--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
         <ul>
             <li><a href="bil.html">bil.html</a></li>
         </ul>
+     <h2>箱</h2>
+        ボックス：
+        <ul>
+            <li><a href="box.html">box.html</a></li>
+        </ul>
+     <h2>ロボット</h2>
+        ロボット：
+        <ul>
+            <li><a href="robot.html">robot.html</a></li>
+        </ul>
   </p>
   </body>
 </html>
