--- a/Bump.html
+++ b/Bump.html
@@ -49,7 +49,7 @@
 
         // テクスチャー読み込み
         var textureLoader = new THREE.TextureLoader();  
-        var texture = textureLoader.load("img1.jpg");
+        var texture = textureLoader.load("img1.png");
         var mat = new THREE.MeshPhongMaterial();
         mat.map = texture;
   
