--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         <ul>
             <li><a href="robot.html">robot.html</a></li>
         </ul>
+     <h1>サンプル</h1>
+        サンプル：
+        <ul>
+            <li><a href="sample.html">sample.html</a></li>
+        </ul>
   </p>
   </body>
 </html>
