--- a/sample.html
+++ b/sample.html
@@ -67,10 +67,10 @@
         mat.bumpMap = bump;
         mat.bumpscale = 0.2;
         
-        var sphereGeometry = new THREE.SphereGeometry( 1.0, 32, 32 ); 
+        var sphereGeometry = new THREE.SphereGeometry( 0.9, 32, 32 ); 
         var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x0000ff,wireframe: true} );
         var sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
-        sphere.position.set( 0, 0, 0);
+        sphere.position.set( 0, 1, 0);
         scene.add( sphere ); 
         
         var head_g = new THREE.BoxGeometry( 0.5, 0.3, 0.3);
@@ -108,7 +108,7 @@
           requestAnimationFrame(update);
 
            // 箱を回転させる
-          aicon.rotation.x += 0;
+          aicon.moveto.x += 0.1;
           aicon.rotation.y += 0;
 
         }
