--- a/sample.html
+++ b/sample.html
@@ -70,7 +70,7 @@
         var sphereGeometry = new THREE.SphereGeometry( 0.9, 32, 32 ); 
         var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x0000ff,wireframe: true} );
         var sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
-        sphere.position.set( 0, 1, 0);
+        sphere.position.set( 0, 0.9, 0);
         scene.add( sphere ); 
         
         var head_g = new THREE.BoxGeometry( 0.5, 0.3, 0.3);
@@ -108,7 +108,7 @@
           requestAnimationFrame(update);
 
            // 箱を回転させる
-          aicon.moveto.x += 0.1;
+          aicon.position.x += 0.1;
           aicon.rotation.y += 0;
 
         }
