--- a/sample.html
+++ b/sample.html
@@ -107,9 +107,8 @@
           renderer.render(scene, camera);
           requestAnimationFrame(update);
 
-           // 箱を回転させる
-          aicon.position.x += 0.1;
-          aicon.rotation.y += 0;
+          aicon.position.x += 0.01;
+          aicon.position.y += 0.01;
 
         }
       }
