--- a/sample.html
+++ b/sample.html
@@ -30,6 +30,19 @@
         // カメラコントローラーを作成
         const controls = new THREE.OrbitControls(camera, document.body); 
         
+         var directionalLightM = new THREE.DirectionalLight(0xffffff,0.3);
+      directionalLightM.position.set(0, 10, -5);
+      directionalLightM.castShadow = true; 
+      //シーンに追加
+      scene.add(directionalLightM);
+
+      // 照明を作成SpotLight(色, 光の強さ, 距離, 照射角, ボケ具合, 減衰率)
+      var light = new THREE.SpotLight(0xffffff, 1, 100, Math.PI / 20, 0.2);
+      light.position.set(0,10, -15);
+      //light.target.position.set( 0, 5, -100 );
+      // ライトに影を有効にする
+      light.castShadow = true;
+        
         // 平行光源1
         var directionalLight1 = new THREE.DirectionalLight(0xffffff);
         directionalLight1.position.set(10, 10, 10);
