--- a/sample.html
+++ b/sample.html
@@ -62,7 +62,7 @@
         mat.bumpscale = 0.2;
         
         var sphereGeometry = new THREE.SphereGeometry( 0.9, 32, 32 ); 
-        var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0xffffff,wireframe: ture} );
+        var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0xffffff,wireframe: true} );
         var sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
         sphere.position.set( 0, 0.9, 0);
         scene.add( sphere ); 
