--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
 <body>
   <h1>バンプ</h1>
   <p>
-        バンプ：
-        <ul>
-            <li><a href="Bump.html">Bump.html</a></li>
-        </ul>
-  
-   <h2>ビルポート</h2>
-        ビルボード：
-        <ul>
-            <li><a href="bil.html">bil.html</a></li>
-        </ul>
-     <h2>箱</h2>
-        ボックス：
+       <h2>図形</h2>
+        図形　第5回授業：
         <ul>
             <li><a href="box.html">box.html</a></li>
         </ul>
      <h2>ロボット</h2>
-        ロボット：
+        ロボット　第6回授業：
         <ul>
             <li><a href="robot.html">robot.html</a></li>
         </ul>
+        バンプ　第7回授業：
+        <ul>
+            <li><a href="Bump.html">Bump.html</a></li>
+        </ul>
+  
+   <h2>ビルボード</h2>
+        ビルボード　第8回授業：
+        <ul>
+            <li><a href="bil.html">bil.html</a></li>
+        </ul>
+    
      <h1>最終作品</h1>
         左の物体はGitHubのアイコンを、右の円はその周りにある額縁をイメージしたものです。
     　　一応、なぜか逃げる円をアイコンが追いかけて定位置につこうとしているうちに、速度差からいつの間にか抜かしているという作品のイメージです。
