--- a/sample.html
+++ b/sample.html
@@ -5,9 +5,9 @@
     <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
   </head>
 <body>
-    左の物体はGitHubのアイコンを、右の円はその周りにある額縁をイメージしたものです。
-    　　一応、なぜか逃げる円をアイコンが追いかけて定位置につこうとしているうちに、速度差からいつの間にか抜かしているという作品のイメージです。
-        また、最初のカメラ視点では見切れるくらいの位置にアイコンが円の真ん中あたりに移動するようにしましたが特に意味はありません。
+    左の物体はGitHubのアイコンを、右の円はその周りにある額縁をイメージしたものです。<br>
+    一応、なぜか逃げる円をアイコンが追いかけて定位置につこうとしているうちに、速度差からいつの間にか抜かしているという作品のイメージです。<br>
+    また、最初のカメラ視点では見切れるくらいの位置にアイコンが円の真ん中あたりに移動するようにしましたが特に意味はありません。
  <script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
