--- a/sample.html
+++ b/sample.html
@@ -36,12 +36,12 @@
         // 平行光源1
         var directionalLight1 = new THREE.DirectionalLight(0xffffff);
         directionalLight1.position.set(10, 10, 10);
-        // シーンに追加
+        directionalLight1.castShadow = true;
         scene.add(directionalLight1);
         // 平行光源2
         var directionalLight2 = new THREE.DirectionalLight(0x888888);
         directionalLight2.position.set(-10, -10, 10);
-        // シーンに追加
+        directionalLight2.castShadow = true;
         scene.add(directionalLight2);
 
         var planeGeometry = new THREE.PlaneGeometry(5,5,10,10); //縦、横、分割数、分割数
