--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
     
      <h1>最終作品</h1>
-       GithubとDiscordのアイコン
+       題名：GithubとDiscordのアイコン
         <ul>
             <li><a href="sample.html">sample.html</a></li>
         </ul>
